--- a/index.html
+++ b/index.html
@@ -54,18 +54,15 @@
                             </video>
                         </div>
                     </div>
-
                     <div class="logo_banner_block_mobile">
                         <div class="content_body">
                         </div>
                     </div>
-            
-
                 <section id="page__section_1" class="page__section_1" >
                     <div class="auquauntance_block">
                         <div class="title __anim-items">ДАВАЙТЕ ЗНАЙОМИТИСЯ!</div>
                         <div class="logo_banner_block_video">
-                            <video controls muted poster="/video/poster_video_mobile.png" preload="auto" class="full_screen__video">
+                            <video controls muted poster="/video/poster_video_mobile.png" preload="auto" class="full_screen__video_mobile">
                                 <source type="video/webm" src="/video/video_logo.webm">
                                 <source type="video/mp4" src="/video/video_logo.MP4">
                             </video>
