--- a/products.html
+++ b/products.html
@@ -204,6 +204,6 @@
         </footer> 
     </body>
     <!--script-->
-    <script src="burgerMenuOtherPage.js"></script>
+    <script src="/js/burgerMenuOtherPage.js"></script>
     <script src="/js/scrollAnimation.js"></script>
 </html>
